--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-minimal
 title: Nicole's Portfolio
 description: Fall 2024 digital humanites portfolio.
 
+Here is [my reflection on our time in the EC](ec_reflection.md).
